# extend-official

./: .gitignore  package-lock.json
cli/: package-lock.json  package.json
cli/src/: 1e6nft-dev.ts  1e6nft.spec.ts  extend-cli.ts  fund.sh  initialize_base.sh  tsconfig.json  update_authority.sh  upload.sh  upload_ledger.sh
cli/src/commands/: mint.ts  register-candymachine.ts  sendAllNfts.ts  upload.ts
cli/src/helpers/: accounts.ts  cache.ts  constants.ts  instructions.ts  metadata.ts  schema.ts  storage-type.ts  transactions.ts  various.ts
cli/src/ledger/: utils.ts
cli/temp_test/: base.json
client/: .gitignore  package-lock.json  package.json  tsconfig.paths.json
client/public/: index.html  manifest.json
client/src/: App.tsx  AppMint.tsx  index.css  index.tsx
client/src/actions/: accept_offer.ts  accept_rent.ts  change_color.ts  change_offer.ts  index.ts  init_base.ts  init_frame.ts  init_neighborhood_metadata.ts  init_space_metadata.ts  init_voucher_system.ts  metadata.ts  send_transaction.ts  set_rent.ts  (+1 more)
color/: Cargo.toml  deploy_ledger.sh
color/src/: error.rs  instruction.rs  processor.rs  state.rs  validation_utils.rs
color/src/processor/: change_color.rs  init_frame.rs  processor_utils.rs
js/: package.json
js/pages/: index.tsx
js/styles/: Home.module.css  globals.css
rent/: Cargo.toml  deploy_ledger.sh  test_rent.ipynb
rent/src/: instruction.rs  processor.rs  state.rs
space/: Cargo.toml
space-metadata/: package.json
space-metadata/helpers/: common.ts
space/src/: error.rs  instruction.rs  processor.rs  state.rs
(+64 files in other folders)
