[package]
name = "extend-color"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.14"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ]}
arrayref = "0.3.6"
solana-frozen-abi = "=1.8.0"
zeroize = "=1.3.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
